syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "google/protobuf/wrappers.proto";
import "managed/atomic_inner_transaction.proto";

message AtomicTransaction {
  bytes id = 1;
  bytes sender_public_key = 2;
  google.protobuf.BytesValue miner = 3;
  repeated AtomicInnerTransaction transactions = 4;
  int64 timestamp = 5;
  repeated bytes proofs = 6;
  bytes sender_address = 7;
}